-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.2, 6.0.3, 6.1.0 Beta2
-
macOS 11.2.2
-
-
7f3bcf85f1041e7e56dba37593dcd80f2054c221 (qt/qttools/dev) 03abcbabbd4caa11048d19d95b23f165cd7a5361 (qt/qttools/dev)
If configure qt use -plugindir with path other than plugins, macdeployqt doesn't copy the plugins into the app bundle, the PlugIns directory doesn't exist.
Related github issue can be found in https://github.com/Homebrew/homebrew-core/issues/73019
After deploying app, some plugin cannot resolve the rpath, log: https://github.com/Homebrew/homebrew-core/files/6152905/macdeployqt.log