macdeployqt: Fix plugin resolution bugs for non-standard installs

Uses QLibraryInfo to resolve plugins at installed locations.

[ChangeLog][macOS][macdeployqt] Uses QLibraryInfo to resolve plugins at install locations.

Fixes: QTBUG-91644
Change-Id: Ie309061024abd7a58ea62d707716342c99897c26
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>